# isae-bots-bn-2024

./: .gitignore  MAE_BR.drawio  README.md
ACT/: platformio.ini  (+1 more)
BR/TeensyBRpio/: .clang-format  .gitignore  CMakeLists.txt  README.md  RampSM.odg  package.xml  platformio.ini  state_machine.drawio
BR/TeensyBRpio/br_controller/: CMakeLists.txt  extra_script.py  package.xml  platformio.ini
BR/TeensyBRpio/br_controller/extra_packages/: br_messages
BR/TeensyBRpio/br_controller/include/: Actuators.hpp  Clock.hpp  PositionFeedback.hpp  configuration.hpp  logging.hpp
BR/TeensyBRpio/br_controller/src/: main_arduino.cpp  main_simulation.cpp
BR/TeensyBRpio/br_messages/: CMakeLists.txt  package.xml
BR/TeensyBRpio/br_messages/msg/: GainsPid.msg  LogEntry.msg
BR/TeensyBRpio/doc/: BR_relations.drawio  States.md
BR/TeensyBRpio/include/: Asserv.hpp  BrSM.hpp  BrSMWrapper.hpp  LED.hpp  OdosPosition.hpp  PointTracking.hpp  ROS.hpp  a_define.h  asserv.hpp  defines.hpp  logging.h  main_loop.hpp  motors.hpp  state_machine.hpp
BR/TeensyBRpio/include/BrSM/: BrSM.hpp  BrSMWrapper.hpp
BR/TeensyBRpio/include/Ramp/: Ramp.hpp  RampSM.hpp
BR/TeensyBRpio/include/Trajectories/: BezierTrajectory.hpp  LinearTrajectory.hpp  RotationTrajectory.hpp  Trajectory.hpp
BR/TeensyBRpio/include/bezier/: bezier.hpp
BR/TeensyBRpio/include/encoders/: HardOdoEncoder.hpp  OdoEncoder.hpp  QuadDecode.h  SoftOdoEncoder.hpp
BR/TeensyBRpio/include/feedback/: PositionEstimatorOdo.hpp  PositionFeedback.hpp  StateSimulator.hpp
BR/TeensyBRpio/include/geometry/: GeometricTools.hpp  Position2D.h
BR/TeensyBRpio/include/ros/: Logger.hpp  ROS.hpp  ROS_arduino.hpp  ROS_linux.hpp
BR/TeensyBRpio/include/state_machine/: BrSM.hpp  BrSMWrapper.hpp  Callback.hpp  Events.hpp  Ramp.hpp  RampSM.hpp  motorSM.hpp
BR/TeensyBRpio/include/trajectories/: BezierTrajectory.hpp  LinearTrajectory.hpp  RotationTrajectory.hpp  Trajectory.hpp
BR/TeensyBRpio/include/utils/: FilterLowPass.h  Led.hpp  SwitchFiltered.hpp  Timer.hpp  clock.h  int.h  math.h  string.h
BR/TeensyBRpio/lib/Defines/: RampDefines.hpp  defines.hpp
BR/TeensyBRpio/lib/FilterLowPass/: FilterLowPass.cpp
BR/TeensyBRpio/lib/GeometricTools/: GeometricTools.cpp  GeometricTools.hpp
BR/TeensyBRpio/lib/LED/: LED.cpp  LED.hpp
BR/TeensyBRpio/lib/Logger/: Logger.cpp  Logger.h
BR/TeensyBRpio/lib/Motors/: Motors.cpp  Motors.hpp
BR/TeensyBRpio/lib/OdriveArduino/: ODriveArduino.cpp  ODriveArduino.h  odriveConfig.json
BR/TeensyBRpio/lib/Position2D/: Position2D.cpp  Position2D.h
BR/TeensyBRpio/lib/Ramp/: Ramp.cpp  Ramp.hpp  RampSM.cpp  RampSM.hpp
BR/TeensyBRpio/lib/SM/: Events.hpp  fsmlist.hpp
BR/TeensyBRpio/src/: Asserv.cpp  BrSM.cpp  BrSM.hpp  BrSMWrapper.cpp  LED.cpp  OdosPosition.cpp  PointTracking.cpp  ROS.cpp  TeensyBRpio.code-workspace  asserv.cpp  fsmlist.hpp  main_loop.cpp  main_loop_arduino.cpp  main_loop_simu.cpp  motors.cpp  state_machine.cpp
(+599 files in other folders)
