<?xml version="1.0"?>
<package format="2">
  <name>br_simu</name>
  <version>0.0.1</version>
  <description>BR (base roulante) simulation on Linux. Use platform.io to compile the actual BR on the teensy.</description>
  <maintainer email="you@example.com">Antonin Bretagne</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>br_messages</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>